# geolapp

./: .env  .gitignore  .~lock.Амазар_описания 2024.xlsx#  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  supervisord.conf  to_db.py
.streamlit/: config.toml
app/: database.py  main.py
app/dao/: base.py
app/data_samples/: dao.py  rb.py  router.py  schemas.py
app/drill_hole/: dao.py  rb.py  router.py  schemas.py
app/frontend/: add_data.py  app.py  photo_handler.py
app/migration/: env.py
app/migration/versions/: 4b57aedb670f_initial_revision.py  6368217b4db3_add_photos_table_and_remove_sample_.py  8e30d373053e_add_created_at_and_updated_at_columns.py  a5a09c87284b_added_drill_hole_table.py  c48ad2bd02d9_add_integer_primary_keys_to_drill_hole_.py  dce6c24b5a19_add_photos_table_and_remove_sample_.py  ec7078bebc4f_snapshot_of_current_schema.py
app/samples/: dao.py  models.py  rb.py  router.py  schemas.py
app/scripts/: load_data.py  load_photos.py  metadata.xlsx  rare_ore_mineralization.xlsx  start.sh  veins.xlsx
extra/: REWRITEN_1.xlsx  accessory_minerals.xlsx  metasomatites.xlsx  mineral_composition.xlsx  ore_mineralization.xlsx  processed_amazar_data_final.xlsx  schema.sql  to_img.py  toex.py  veins.xlsx
extra/extracted_excel/: [Content_Types].xml
extra/extracted_excel/docProps/: app.xml  core.xml
extra/extracted_excel/xl/: sharedStrings.xml  styles.xml  workbook.xml
extra/extracted_excel/xl/drawings/: drawing1.xml
extra/extracted_excel/xl/worksheets/: sheet1.xml
(+1 files in other folders)
